tests/fsharp/typecheck/sigs/neg95.bsl

neg95.fs(5,6,5,18): typecheck error FS0954: This type definition involves an immediate cyclic reference through a struct field or inheritance relation

neg95.fs(12,6,12,17): typecheck error FS0954: This type definition involves an immediate cyclic reference through a struct field or inheritance relation

neg95.fs(15,6,15,18): typecheck error FS3199: A union type which is a struct must have only one case.